--- a/index.html
+++ b/index.html
@@ -1,55 +1,57 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
-    <title>Exemple image</title>
+    <title>GTI700</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 
 </head>
+
 <body>
-<div class="row">
+    <div class="row">
 
-    <div class="col s12 m6">
+        <div class="col s12 m6">
 
-    <h2 class="section center-align">Humidité</h2>
-    <h5 id = "Hum-Valeur-actuelle">Valeur actuelle : </h5>
-    <h5 id = "Hum-Moyenne">Moyenne des 30 dernières valeurs : </h5>
-        <canvas id="humidityChart" width="100" height="50"></canvas>
-        <table class="striped centered">
-            <thead>
-            <tr>
-                <th>Timestamp</th>
-                <th>Valeur</th>
-            </tr>
-            </thead>
+            <h2 class="section center-align">Humidité</h2>
+            <h5 id="Hum-Valeur-actuelle">Valeur actuelle : </h5>
+            <h5 id="Hum-Moyenne">Moyenne des 30 dernières valeurs : </h5>
+            <canvas id="humidityChart" width="100" height="50"></canvas>
+            <table class="striped centered">
+                <thead>
+                    <tr>
+                        <th>Timestamp</th>
+                        <th>Valeur</th>
+                    </tr>
+                </thead>
 
-            <tbody id="humidity-data"></tbody>
-        </table>
+                <tbody id="humidity-data"></tbody>
+            </table>
+        </div>
+
+        <div class="col s12 m6">
+
+
+            <h2 class="section center-align">Température</h2>
+            <h5 id="Temp-Valeur-actuelle">Valeur actuelle : </h5>
+            <h5 id="Temp-Moyenne">Moyennes des 30 dernières valeurs : </h5>
+            <canvas id="tempChart" width="100" height="50"></canvas>
+            <table class="striped centered">
+                <thead>
+                    <tr>
+                        <th>Timestamp</th>
+                        <th>Valeur</th>
+                    </tr>
+                </thead>
+
+                <tbody id="temprature-data"></tbody>
+            </table>
+        </div>
     </div>
 
-    <div class="col s12 m6">
-
-
-        <h2 class="section center-align">Température</h2>
-        <h5 id = "Temp-Valeur-actuelle">Valeur actuelle : </h5>
-        <h5 id = "Temp-Moyenne">Moyennes des 30 dernières valeurs : </h5>
-        <canvas id="tempChart" width="100" height="50"></canvas>
-        <table class="striped centered">
-            <thead>
-            <tr>
-                <th>Timestamp</th>
-                <th>Valeur</th>
-            </tr>
-            </thead>
-
-            <tbody id="temprature-data"></tbody>
-        </table>
-        </div>
-</div>
-
-        <script>
+    <script>
         /** ChartJS **/
         const BACKEND_URL = "http://192.168.0.20:3000/GTI700/";
         document.addEventListener("DOMContentLoaded", () => {
@@ -91,9 +93,9 @@
 
             setInterval(() => {
                 fetchData(BACKEND_URL + "humidity", "humidity-data", humidChart);
-                fetchData(BACKEND_URL + "temperature", "temprature-data",tempChart);
+                fetchData(BACKEND_URL + "temperature", "temprature-data", tempChart);
                 fetchValeur(BACKEND_URL + "humidity", "Hum-Valeur-actuelle");
-                fetchValeur(BACKEND_URL + "temperature","Temp-Valeur-actuelle");
+                fetchValeur(BACKEND_URL + "temperature", "Temp-Valeur-actuelle");
                 fetchMoy(BACKEND_URL + "humidity", "Hum-Moyenne");
                 fetchMoy(BACKEND_URL + "temperature", "Temp-Moyenne");
             }, 3000);
@@ -104,10 +106,10 @@
             const data = await res.json();
             const valeur = document.getElementById(id);
             try {
-                if(sensorType.includes("humidity")){
+                if (sensorType.includes("humidity")) {
                     valeur.textContent = "Valeur actuelle : " + data.humidity + "%";
                 }
-                if(sensorType.includes("temperature")){
+                if (sensorType.includes("temperature")) {
                     valeur.textContent = "Valeur actuelle : " + data.temperature;
                 }
             } catch (err) {
@@ -116,18 +118,18 @@
             }
         }
         async function fetchMoy(sensorType, id) {
-            const res = await fetch(sensorType+ "/30/moy");
+            const res = await fetch(sensorType + "/30/moy");
             const data = await res.json();
             const valeur = document.getElementById(id);
 
             try {
-                if(data.value === "N/A"  || data.value === "N/A%" ){
+                if (data.value === "N/A" || data.value === "N/A%") {
                     valeur.textContent = "Moyenne des 30 dernières valeurs : " + "en attente";
-                }else{
-                    if(sensorType.includes("humidity")){
+                } else {
+                    if (sensorType.includes("humidity")) {
                         valeur.textContent = "Moyenne des 30 dernières valeurs : " + data.value;
                     }
-                    if(sensorType.includes("temperature")){
+                    if (sensorType.includes("temperature")) {
                         valeur.textContent = "Moyenne des 30 dernières valeurs : " + data.value;
                     }
                 }
@@ -155,13 +157,13 @@
                 timeCell.textContent = timestamp;
 
                 const valueCell = document.createElement("td");
-                if(sensorType.includes("humidity")){
+                if (sensorType.includes("humidity")) {
                     valueCell.textContent = value + "%";
-                }else{
+                } else {
                     valueCell.textContent = value;
                 }
 
-                if(chart){
+                if (chart) {
                     chart.data.labels.push(timestamp);
                     chart.data.datasets[0].data.push(value);
                     if (chart.data.labels.length > 30) {// max 30
@@ -173,10 +175,11 @@
                 row.appendChild(valueCell);
                 tbody.appendChild(row);
             });
-            if(chart){chart.update();}
+            if (chart) { chart.update(); }
         }
 
 
     </script>
 </body>
+
 </html>
